--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <title>El titulo del post</title>
 </head>
 <body>
-    <h1>Aqui vamos a realizar un blog post</h1>
+    <h1>Este es el titulo</h1>
     <p>y este es el primer parrafo de inicio</p>
     
 </body>
