antes de la rama cabecera

--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,11 @@
     <title>El titulo del post</title>
 </head>
 <body>
-    <h1>Este es el titulo</h1>
-    <p>y este es el primer parrafo de inicio</p>
-    
+    <div class="blogpost">
+    <div class="cabecera">
+    <h1>Este es el titulo interesande de la rama cabecera</h1>
+    </div>
+    <p>y este es el primer parrafo de inicio Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores nihil quod quibusdam iusto repellendus placeat odit, sit vel magni fugiat porro ad natus iure temporibus aliquid inventore recusandae, excepturi minima.</p>
+</div>
 </body>
 </html>
