modifique la cabecera y el color a rojo

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 <body>
     <div class="blogpost">
     <div class="cabecera">
-    <h1>ESTE ES EL TITULO DE LA CABECERA MAS COOL</h1>
+    <h1>ESTE ES EL TITULO DE LA CONFIANZA MAS COOL</h1>
     </div>
     <p>y este es el primer parrafo de inicio Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores nihil quod quibusdam iusto repellendus placeat odit, sit vel magni fugiat porro ad natus iure temporibus aliquid inventore recusandae, excepturi minima.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia perspiciatis molestiae dolorem, possimus aspernatur consequatur ducimus vel eius amet cum nisi hic quibusdam odit voluptate autem ex quod illo.</p>
