--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,11 @@
     <p>y este es el primer parrafo de inicio Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores nihil quod quibusdam iusto repellendus placeat odit, sit vel magni fugiat porro ad natus iure temporibus aliquid inventore recusandae, excepturi minima.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia perspiciatis molestiae dolorem, possimus aspernatur consequatur ducimus vel eius amet cum nisi hic quibusdam odit voluptate autem ex quod illo.</p>
     <P>suscribite y dale like</P>
+    <footer>
+        <p>Hecho con amor platzi....</p>
+    </footer>
 </div>
+
+
 </body>
 </html>
