--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <div class="cabecera">
     <h1>HYPER BLOG Tu blog de cabecera</h1>
     </div>
-    <p>y este es el primer parrafo de inicio Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores nihil quod quibusdam iusto repellendus placeat odit, sit vel magni fugiat porro ad natus iure temporibus aliquid inventore recusandae, excepturi minima.</p>
+    <p>y este es el primer parrafo de inicio y aqui esta toda la informacion principal del blog espero no tener prolemas al realizar el merge ya que se coambio gran parte de este parrafo.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia perspiciatis molestiae dolorem, possimus aspernatur consequatur ducimus vel eius amet cum nisi hic quibusdam odit voluptate autem ex quod illo.</p>
     <P>suscribite y dale like</P>
     <footer>
